--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
 - go vet $(go list ./... | grep -v /vendor/)
 - go test ./...
 - GOOS=linux go generate
+- env
 - CGO_ENABLED=0 go build -o spacectl-${GOOS}-${GOARCH}${EXT} -ldflags "-s" -a -installsuffix cgo
 deploy:
   provider: releases
