--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 deploy:
 - provider: script
   skip_cleanup: true
-  script: bash <(wget -qO- https://git.io/goreleaser)
+  script: curl -sL https://git.io/goreleaser | bash  
   on:
     tags: true
     condition: $TRAVIS_OS_NAME = linux
