--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,6 +10,10 @@ builds:
   - GO111MODULE=on
   ldflags:
     - -s -w -X github.com/mittwald/spacectl/buildinfo.Version={{.Tag}} -X github.com/mittwald/spacectl/buildinfo.Hash={{.ShortCommit}} -X github.com/mittwald/spacectl/buildinfo.BuildDate={{.Date}}
+  goos:
+  - darwin
+  - linux
+  - windows
 checksum:
   name_template: 'checksums.txt'
 snapshot:
